# py-fastapi

./: .dockerignore  .env.example  Dockerfile  README.md  compose.yml  docker-compose.yml  main.py  pyproject.toml  requirements.txt
alembic/: env.py
src/: main.py
src/app/api/: __init__.py  health.py
src/app/api/graphql/: graphql_test.py
src/app/api/graphql/v1/: graphql_test.py  graphql_test2.py
src/app/api/legacy/: health.py
src/app/api/rest/v1/: qr_generator.py  user.py
src/app/api/v1/: qr_generator.py  resources.py  user.py
src/app/core/: config.py  logger.py
src/app/core/db/: __init__.py  database.py  health.py
src/app/middleware/: ProcessTimeMiddleware.py  __init__.py
src/app/models/: __init__.py  base.py  base_model.py  user.py
src/app/services/: qr_service.py
src/routers/: graphql_test.py  qr_generator.py
src/services/: qr_service.py
