[project]
name = "py-fastapi"
version = "0.0.1"
description = "Just a basic application to learn and experiment with FastAPI"
authors = [{ name="venibren", email="brendan@venibren.dev" }]
license = "MIT"
license-files = ["LICEN[CS]E*"]
readme = "README.md"
requires-python = ">=3.9, <4.0"

dependencies = [
    "alembic>=1.16.5",
    "asyncpg>=0.31.0",
    "fastapi",
    "image>=1.5.33",
    "isort>=6.1.0",
    "pillow",
    "pip>=25.3",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.11.0",
    "qrcode[pil]",
    "rich>=14.2.0",
    "ruff>=0.14.5",
    "setuptools>=80.9.0",
    "sqlalchemy>=2.0.44",
    "strawberry-graphql[fastapi]",
    "uvicorn[standard]>=0.35.0",
    "wheel>=0.45.1",
]

[project.optional-dependencies]
dev = [
    "black>=25.11.0",
    "faker>=37.12.0",
    "mypy>=1.18.2",
    "pytest>=8.4.2",
    "pytest-mock>=3.15.1",
    "types-redis>=4.6.0.20241004",
]

[project.urls]
Homepage = "https://github.com/venibren/py-fastapi"
Issues = "https://github.com/venibren/py-fastapi/issues"

[tool.black]
line-length = 176
target-version = ["py37"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
remove_redundant_aliases = true
combine_as_imports = true
line_length = 176
